--- a/server/conf/server-sample.toml
+++ b/server/conf/server-sample.toml
@@ -8,7 +8,7 @@ db_type = "sqlite3"
 db_source = "/var/lib/anylink/anylink.db"
 # Certificate file
 cert_file = "/etc/anylink/vpn_cert.crt"
-cert_key = "/etc/anylinkvpn_cert.key"
+cert_key = "/etc/anylink/vpn_cert.key"
 files_path = "/var/lib/anylink/files"
 profile = "/etc/anylink/profile.xml"
 # Log directory, if empty, write to standard output
