--- a/server/conf/server-sample.toml
+++ b/server/conf/server-sample.toml
@@ -32,8 +32,9 @@ jwt_secret = "abcdef.0123456789.abcdef"
 
 # Service listening address
 server_addr = ":443"
-# Enable DTLS, disabled by default
-server_dtls = false
+# Turn on DTLS
+server_dtls = true
+# UDP listening address (any port)
 server_dtls_addr = ":443"
 # Admin service listening address
 admin_addr = ":8800"
@@ -50,7 +51,7 @@ ipv4_start = "192.168.90.100"
 ipv4_end = "192.168.90.200"
 
 # Maximum number of clients
-max_client = 100
+max_client = 200
 # Number of simultaneous online users for a single user
 max_user_client = 3
 # IP lease period (seconds)
@@ -60,10 +61,10 @@ ip_lease = 86400
 default_group = "one"
 
 # Client failure detection time (seconds) dpd > keepalive
-cstp_keepalive = 6
-cstp_dpd = 10
-mobile_keepalive = 15
-mobile_dpd = 20
+cstp_keepalive = 5
+cstp_dpd = 12
+mobile_keepalive = 10
+mobile_dpd = 22
 
 # Set maximum transmission unit
 mtu = 1460
@@ -72,10 +73,12 @@ mtu = 1460
 default_domain = "example.com"
 #default_domain = "example.com abc.example.com"
 
+# Idle link timeout (seconds) - disconnect the link after timeout, 0 turns off this function
+idle_timeout = 7200
 # Session expiration time, used for disconnection and reconnection, 0 will never expire
 session_timeout = 3600
 auth_timeout = 0
-audit_interval = -1
+audit_interval = 600
 
 show_sql = false
 
