--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Set up QEMU
         # https://github.com/docker/setup-qemu-action
         uses: docker/setup-qemu-action@v3
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -54,13 +55,10 @@ jobs:
           commitId=`git rev-parse HEAD`
           echo "APP_VER=$appVer" >> $GITHUB_ENV
           echo "commitId=$commitId" >> $GITHUB_ENV
-          
           echo $appVer > version_info
           echo $commitId >> version_info
           echo $GITHUB_REF >> version_info
           echo $GITHUB_REF_NAME >> version_info
-          
-          #cd server;go mod tidy
 
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -71,12 +69,10 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           platforms: linux/amd64,linux/arm64
-          #platforms: linux/amd64
           build-args: |
             appVer=${{ env.APP_VER }}
             commitId=${{ env.commitId }}
           tags: cherts/anylink:latest,cherts/anylink:${{ env.APP_VER }}
-          #tags: cherts/anylink:${{ env.APP_VER }}
 
       - name: Build deploy binary
         shell: bash
@@ -91,8 +87,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         #if: startsWith(github.ref, 'refs/tags/')
         with:
+          token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
           tag_name: v${{ env.APP_VER }}
           files: artifact-dist/*
-
-#  Docker:
-#    name: build-docker
