--- a/server/conf/server.toml
+++ b/server/conf/server.toml
@@ -7,7 +7,7 @@
 db_type = "sqlite3"
 db_source = "./conf/anylink.db"
 # Certificate file
-cert_file = "./conf/vpn_cert.crt"
+cert_file = "./conf/vpn_cert.pem"
 cert_key = "./conf/vpn_cert.key"
 files_path = "./conf/files"
 # Log level
@@ -34,6 +34,11 @@ server_dtls = true
 server_dtls_addr = ":443"
 # Admin service listening address
 admin_addr = ":8800"
+
+# Maximum number of clients
+max_client = 200
+# Number of simultaneous online users for a single user
+max_user_client = 3
 
 # Virtual network type [tun macvtap]
 link_mode = "tun"
